# Messenger

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp
Application/Include/: ClientController.hpp  Connection.hpp  Entities.hpp  MainView.hpp
Application/Source/: ClientController.cpp  Connection.cpp  MainView.cpp
DedicatedHost/: CMakeLists.txt  main.cpp
DedicatedHost/Include/: Channel.hpp  Message.hpp  PacketView.hpp  Server.hpp  ServerController.hpp  User.hpp
DedicatedHost/Source/: Entities.cpp  Message.cpp  PacketView.cpp  Server.cpp  ServerController.cpp  User.cpp
Test/: CMakeLists.txt  PacketTest.cpp
Utils/: BackgroundWorker.hpp  MemoryStream.hpp  Packet.hpp
